# DeepSparkInference

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  README_en.md  RELEASE.md  gen_models_yaml.py  generate_req.py  models_igie.yaml
.gitee/: PULL_REQUEST_TEMPLATE.zh-CN.md
data/datasets/: README.md
docs/: README_TEMPLATE.md
models/audio/speech_recognition/conformer/igie/: README.md  alter_onnx.py  build_engine.py  common.py  compute_cer.py  ixrt_inference_accuracy.py  (+3 more)
models/benchmark/: benchmark_longbench.py  benchmark_serving.py  benchmark_serving_multimodal.py  quantize_w8a8.py  requirements.txt  set_environment.sh  test_performance_server.sh  test_performance_server_multimodal.sh  test_vllm_longbench.sh
models/benchmark/internvl2/: README.md
models/benchmark/llama3.1/: README.md
models/benchmark/longbench/: metrics.py  utils.py
models/benchmark/longbench/config/: model2maxlen.json  model2path.json
models/benchmark/longbench/result_record/: llama3.1-8b-chat.jsonl  qwen2-vl-chat.jsonl  qwen2.5-14b-chat.jsonl
models/benchmark/mixtral/: README.md
models/benchmark/qwen2.5/: README.md
models/benchmark/yi1.5/: README.md
models/cv/classification/igie_common/: export.py  export_mmcls.py  quantize.py  requirements.txt
models/cv/classification/ixrt_common/: README.md  build_engine.py  calibration_dataset.py  common.py  efficientnet_b0_ort_quant.py  efficientnet_b1_ort_quant.py  export.py  export_mmcls.py  export_timm.py  inference.py  modify_batchsize.py  onnx_runtime_quant.py  quant.py  refine_model.py  requirements.txt  simplify_model.py
models/cv/detection/centernet/: README.md  inference.py
models/cv/object_detection/: .gitignore
models/cv/object_detection/ixrt_common/: atss_r50_fpn_1x_coco.py  build_engine.py  build_nms_engine.py  calibration_dataset.py  common.py  deploy.py  inference.py  inference_mmdet.py  modify_batchsize.py  paa_r50_fpn_1x_coco.py  quant.py  requirements.txt  retinanet_r50_fpn_1x_coco.py
models/cv/object_detection/yolox/ixrt/plugin/: CMakeLists.txt
models/cv/object_detection/yolox/ixrt/plugin/cmake/: FindIxrt.cmake  FindPluginFiles.cmake
models/cv/object_detection/yolox/ixrt/plugin/src/common/: checkMacrosPlugin.cpp  common_def.cuh  plugin.cpp  plugin.h
models/cv/object_detection/yolox/ixrt/plugin/src/yolox_decoder/: yoloxDecoderKernel.cu  yoloxDecoderPlugin.cc
models/cv/ocr/kie_layoutxlm/: README.md  build_engine.py  inference.py
models/cv/ocr/rec_svtr/: README.md  rec_svtr_tiny_6local_6global_stn_en.yml
models/cv/segmentation/mask_rcnn/ixrt/plugins/: CMakeLists.txt
models/cv/segmentation/mask_rcnn/ixrt/plugins/cmake/: FindIxrt.cmake  SetFlags.cmake
models/cv/segmentation/mask_rcnn/ixrt/plugins/plugin_src/: MaskRcnnInference.cu  MaskRcnnInferencePlugin.h  PredictorDecode.cu  PredictorDecodePlugin.h  RoiAlign.cu  RoiAlignPlugin.h  RpnDecodePlugin.h  RpnNms.cu  RpnNmsPlugin.h
models/cv/semantic_segmentation/igie/: deploy_default.py  export.py
models/cv/semantic_segmentation/mmcv_shim/: __init__.py  _impl.py
models/multimodal/diffusion/stable-diffusion/: demo.py  requirements.txt
models/multimodal/diffusion_model/stable-diffusion/: README.md
models/multimodal/vision_language_model/: utils.py
models/nlp/language_model/bert_base_squad/ixrt/: CMakeLists.txt  README.md
models/nlp/language_model/bert_base_squad/ixrt/ci/: prepare.sh
models/nlp/language_model/bert_base_squad/ixrt/cmake/: FindCompiler.cmake  FindCuda.cmake
models/nlp/language_model/bert_base_squad/ixrt/python/: builder.py  builder_utils_int8.py  evaluate-v1.1.py  inference.py  perf.py
models/nlp/language_model/bert_base_squad/ixrt/python/ixrt/: builder.py  evaluate-v1.1.py  evaluate.py  inference.py  load_ixrt_plugin.py
models/nlp/language_model/bert_base_squad/ixrt/python/script/: infer_bert_base_squad_fp16_ixrt.sh  infer_bert_base_squad_int8_ixrt.sh  inference_squad.sh  mdb_infer_run.sh  prepare.sh
models/nlp/language_model/bert_base_squad/ixrt/src/backend/bert/: bert_helper.h
models/nlp/language_model/bert_base_squad/ixrt/src/common/: checkMacrosPlugin.h  common_def.cuh
models/nlp/language_model/bert_base_squad/ixrt/src/custom_fc/: fcPlugin.cpp
models/nlp/language_model/bert_base_squad/ixrt/src/emb_layernorm/: embLayerNormInt8Plugin.cu  embLayerNormInt8Plugin.h  embLayerNormPlugin.h
models/nlp/language_model/bert_base_squad/ixrt/src/ffn/: ffnPlugin.cpp
models/nlp/language_model/bert_base_squad/ixrt/src/qkv_to_context/: qkvToContextInt8Plugin.cu  qkvToContextPlugin.cpp
models/nlp/llm/llm-benchmark/: README.md  iluvatar_bench  requirements.txt
models/nlp/plm/transformer/: omegaconf.py  setup.py
models/recommendation/widedeep/ixrt/: README.md  change2dynamic.py  deploy.py  export_onnx.py
models/vision-language-understanding/Intern_VL/vllm/: README.md
models/vision-language-understanding/LLava/vllm/: utils.py
models/vision-language-understanding/MiniCPM-V-2/vllm/: minicpmv-2.0-offline.py
models/vision-language-understanding/fuyu-8b/vllm/: offline_inference_vision_language.py
models/vision-language-understanding/llava_next_video-7b/vllm/: README.md
tests/: README.md  all_deepsparkinference_model_info.json  check_models.py  check_precision.py  download_igie_cp.py  generate_req.py  model_info.json  models_igie.yaml  models_ixrt.yaml  models_trtllm.yaml  models_vllm.yaml  pass.yaml  report.py  run_igie.py  run_ixrt.py  run_trtllm.py  run_vllm.py  test.py  utils.py
tests/pre-commit/: check_commit_email.sh  check_license_copyright.py  requirements.txt
toolbox/ByteMLPerf/: .gitignore
toolbox/ByteMLPerf/byte_infer_perf/general_perf/: requirements.txt
(+3060 files in other folders)
